# EBA-aula07-ExperimentoTesteAB

./: README.md  pyproject.toml
data/: df_anterior.csv  df_anterior.xlsx
notebook/: Teste AB.ipynb
